--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -8,38 +8,70 @@
   "start_url": "./",
   "scope": "/",
   "display": "standalone",
+  "display_override": ["window-controls-overlay", "standalone", "minimal-ui"],
   "orientation": "any",
   "background_color": "#0f172a",
   "theme_color": "#0ea5e9",
   "categories": ["finance", "productivity"],
+  "iarc_rating_id": "e58c1f03-6a3f-4160-bd20-589f310c2821",
+  "related_applications": [],
+  "prefer_related_applications": false,
+  "shortcuts": [
+    {
+      "name": "Dashboard",
+      "short_name": "Dashboard",
+      "description": "View your financial overview",
+      "url": "/",
+      "icons": [{ "src": "/icon.svg", "sizes": "192x192" }]
+    },
+    {
+      "name": "Transactions",
+      "short_name": "Transactions",
+      "description": "View all transactions",
+      "url": "/transactions",
+      "icons": [{ "src": "/icon.svg", "sizes": "192x192" }]
+    }
+  ],
   "icons": [
     {
       "src": "/icon.svg",
-      "sizes": "192x192 512x512",
+      "sizes": "48x48 72x72 96x96 128x128 144x144 152x152 167x167 180x180 192x192 256x256 512x512",
       "type": "image/svg+xml",
       "purpose": "any"
     },
     {
       "src": "/icon.svg",
-      "sizes": "192x192 512x512",
+      "sizes": "48x48 72x72 96x96 128x128 144x144 152x152 167x167 180x180 192x192 256x256 512x512",
       "type": "image/svg+xml",
       "purpose": "maskable"
+    },
+    {
+      "src": "/pwa-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/pwa-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any"
     }
   ],
   "screenshots": [
     {
-      "src": "/mobile_screenshot.png",
+      "src": "/screenshot-mobile.png",
       "sizes": "1080x1920",
       "type": "image/png",
       "form_factor": "narrow",
-      "label": "Finance Dashboard on Mobile"
+      "label": "Mobile Dashboard"
     },
     {
-      "src": "/desktop_screenshot.png",
+      "src": "/screenshot-desktop.png",
       "sizes": "1920x1080",
       "type": "image/png",
       "form_factor": "wide",
-      "label": "Full Analytics Dashboard on Desktop"
+      "label": "Desktop Dashboard"
     }
   ]
 }
