Fix: 404 on refresh, remove button shadows in dark mode, and add splash screen for performance

--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,7 @@
 {
   "version": 2,
   "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/index.go"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/frontend/dist/$1"
-    }
+    { "source": "/api/(.*)", "destination": "/api/index.go" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
